--- a/assignment/Homework/homework_lesson_4_data_transformation_part2 (1).ipynb
+++ b/assignment/Homework/homework_lesson_4_data_transformation_part2 (1).ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "4b6c5404",
    "metadata": {
     "vscode": {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e785c110",
    "metadata": {
     "vscode": {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "73cefd70",
    "metadata": {
     "vscode": {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "0ec870a8",
    "metadata": {
     "vscode": {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "f9a05150",
    "metadata": {
     "vscode": {
@@ -613,7 +613,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"Regional Performance Analysis:\"\n",
+      "[1] \"Regional Performance Analysis:\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\u001b[90m# A tibble: 4 × 7\u001b[39m\n",
       "  Region        total_revenue total_profit avg_profit_margin transaction_count\n",
       "  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m                 \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m        \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m             \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m             \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m\n",
@@ -652,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "c7724570",
    "metadata": {
     "vscode": {
@@ -698,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "d89516fa",
    "metadata": {
     "vscode": {
@@ -763,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "fb5fedac",
    "metadata": {
     "vscode": {
@@ -775,7 +781,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"Top 10 Region-Product Category Combinations:\"\n",
+      "[1] \"Top 10 Region-Product Category Combinations:\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\u001b[90m# A tibble: 1 × 3\u001b[39m\n",
       "  total_revenue transaction_count avg_profit_margin\n",
       "          \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m             \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m             \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
@@ -803,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "c508ab48",
    "metadata": {
     "vscode": {
@@ -862,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "6c01f673",
    "metadata": {
     "vscode": {
@@ -933,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "f5295e7c",
    "metadata": {
     "vscode": {
@@ -1083,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "5f8f9dfe",
    "metadata": {
     "vscode": {
@@ -1131,7 +1143,13 @@
       "   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. \n",
       "  20.13   31.17   43.70   44.22   56.55   69.93 \n",
       "\n",
-      "ROI Distribution:\n",
+      "ROI Distribution:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. \n",
       "  25.20   45.28   77.63   93.49  130.16  232.57 \n",
       "\n",
@@ -1297,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "39e61cb5",
    "metadata": {
     "vscode": {
@@ -1317,7 +1335,13 @@
       "1. Top Region:  Europe  generates $ 2,224,182  ( 28.6 % of total revenue)\n",
       "\n",
       "💰 PERFORMANCE ANALYSIS:\n",
-      "────────────────────────\n",
+      "────────────────────────\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "🎯 STRATEGIC RECOMMENDATIONS:\n",
       "──────────────────────────────\n",
@@ -1400,14 +1424,23 @@
     "**Questions to address**:\n",
     "\n",
     "1. **Technical Mastery**: Which dplyr function (mutate, summarize, group_by, count) did you find most powerful for business analysis, and why?\n",
+    "   \n",
+    "   I would say that group_by was the most powerful/ useful because you can easily display exactly what you want to see. Making it easy to see specific patterns and make decisions easier. \n",
     "\n",
     "2. **Business Impact**: What was the most surprising or valuable insight you discovered in your analysis?\n",
     "\n",
-    "3. **Strategic Thinking**: If you were presenting these findings to a company executive, which 3 insights would you prioritize and why?\n",
+    "Something surprising or useful I would say finding key performance indicators was a bit easier than i expected plus i would think that is something that can be super useful in the future.\n",
     "\n",
-    "4. **Methodology**: How did grouping and segmentation help reveal patterns that weren't visible in the raw data?\n",
+    "1. **Strategic Thinking**: If you were presenting these findings to a company executive, which 3 insights would you prioritize and why?\n",
+    "I would prioritize Bulk deal performance because it contributes a lot to overall revenue and profit. I would prioritize how much of a contribution europe has on other regions because the potential opportunity there. And 3rd I would prioritize high value customers because you can always target them and they show to generate at least decent amount. \n",
     "\n",
-    "5. **Future Applications**: What additional business questions could you answer with this dataset using the techniques you've learned?\n",
+    "2. **Methodology**: How did grouping and segmentation help reveal patterns that weren't visible in the raw data?\n",
+    "\n",
+    "For one example it helped easily show which region generates the most revenue. You couldn't really tell looking at the original data.\n",
+    "\n",
+    "3. **Future Applications**: What additional business questions could you answer with this dataset using the techniques you've learned?\n",
+    "\n",
+    "You could answer a question about seasonal performance patterns as well as a question about assessing the risk.\n",
     "\n",
     "**Instructions**: Write thoughtful, paragraph-length responses that demonstrate both technical understanding and business acumen."
    ]
@@ -1421,23 +1454,23 @@
     "\n",
     "**1. Most Powerful Function for Business Analysis:**\n",
     "\n",
-    "[Write your response here - discuss which function you found most valuable and explain why with specific examples from your analysis]\n",
+    "The function i found the most valuable was group_by like in the analysis we used group_by(region) and summary and it went from raw transaction data to an insight about regional performance.\n",
     "\n",
     "**2. Most Valuable Business Insight:**\n",
     "\n",
-    "[Write your response here - identify the insight that would be most actionable for business decision-making]\n",
+    "the most valuable insight I thought that would be most actionabke / easy tpo make a decision based apon would be identifying key performance indicators. \n",
     "\n",
     "**3. Top 3 Insights for Executive Presentation:**\n",
     "\n",
-    "[Write your response here - prioritize insights based on revenue impact, strategic importance, and actionability]\n",
+    "I would prioritize european market for starters becaise of the amount of influence it has. Then I would prioritize bulk deal performance followed by high value customers. \n",
     "\n",
     "**4. Value of Grouping and Segmentation:**\n",
     "\n",
-    "[Write your response here - explain how grouped analysis revealed patterns and trends not visible in aggregate data]\n",
+    "Group analysis makes it much easier to see certain patters or trends not easily spotable in the aggregate data. For example it helped see regional performance disparities easily.\n",
     "\n",
     "**5. Future Business Applications:**\n",
     "\n",
-    "[Write your response here - identify additional analyses that could be performed with this dataset and these techniques]"
+    "Other analyses that could be performed with the data set could be seasonal performance patterns as well as risk assessment."
    ]
   },
   {
